deploy/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appademilytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appademilytics
  template:
    metadata:
      labels:
        app: appademilytics
    spec:
      containers:
        - name: appademilytics
          image: 'appademin/appademilytics:0.2.1'
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: web
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: appademilytics-service
spec:
  selector:
    app: appademilytics
  ports:
    - protocol: TCP
      port: 3000
